--- a/.gitignore
+++ b/.gitignore
@@ -16,6 +16,7 @@ out/
 # Gradle files
 .gradle/
 build/
+build.gradle
 
 # Local configuration file (sdk path, etc)
 local.properties
@@ -42,7 +43,7 @@ captures/
 
 .DS_Store
 
-# CMake ÆÄÀÏÀº sdk¿Í ÇÁ·ÎÁ§Æ® ¼Ò½º path¿¡ µû¶ó ¹Ù²ñ
+# CMake ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ sdkï¿½ï¿½ ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½Æ® ï¿½Ò½ï¿½ pathï¿½ï¿½ ï¿½ï¿½ï¿½ï¿½ ï¿½Ù²ï¿½
 CMakeLists.txt
 
 # bakup file
