--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,10 +23,9 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
-            android:name="com.team.formal.eyeshopping.MainActivity"
+            android:name="com.team.formal.eyeshopping.CVMainActivity"
             android:label="@string/app_name"
             android:theme="@style/AppTheme.NoActionBar"
-            android:screenOrientation="landscape"
             android:configChanges="keyboardHidden|orientation">
 
             <intent-filter>
