--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,7 +26,7 @@
         <activity
             android:screenOrientation="portrait"
             android:name="com.team.formal.eyeshopping.MainActivity"
-            android:label="@string/app_name"
+            android:label=""
             android:theme="@style/AppTheme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -36,15 +36,43 @@
 
         <activity
             android:name=".ActivityShowVisuallySimilarImages"
-            android:label="@string/app_name" />
+            android:label="">
+
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".MainActivity"/>
+            />
+        </activity>
 
         <activity
             android:name=".ActivityShowVisuallySimilarImagesSelect"
-            android:label="@string/app_name" />
+            android:label="">
+
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".ActivityShowVisuallySimilarImages"/>
+            />
+        </activity>
 
         <activity
             android:name=".ActivityFindingResults"
-            android:label="@string/app_name" />
+            android:label="@string/app_name">
+
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".ActivityShowVisuallySimilarImagesSelect"/>
+            />
+        </activity>
+
+        <provider
+            android:name="android.support.v4.content.FileProvider"
+            android:authorities="com.team.formal.eyeshopping.provider"
+            android:exported="false"
+            android:grantUriPermissions="true">
+            <meta-data
+                android:name="android.support.FILE_PROVIDER_PATHS"
+                android:resource="@xml/provider_paths" />
+        </provider>
 
     </application>
 
