--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -66,7 +66,23 @@
 
         <activity
             android:name=".ActivityRecentSearch"
-            android:label="@string/app_name" />
+            android:label="">
+
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".MainActivity"/>
+            />
+        </activity>
+
+        <activity
+            android:name=".ActivityRecommendProducts"
+            android:label="">
+
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".MainActivity"/>
+            />
+        </activity>
 
         <provider
             android:name="android.support.v4.content.FileProvider"
