--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -65,6 +65,16 @@
         </activity>
 
         <activity
+            android:name=".ActivityFindingsResultsSelect"
+            android:label="">
+
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".ActivityFindingResults"/>
+            />
+        </activity>
+
+        <activity
             android:name=".ActivityRecentSearch"
             android:label="">
 
