--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -56,7 +56,7 @@
 
         <activity
             android:name=".ActivityFindingResults"
-            android:label="@string/app_name">
+            android:label="">
 
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
