--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,9 +43,10 @@ dependencies {
     compile 'com.android.support:design:25.1.1'
     compile 'com.google.cloud:google-cloud-vision:0.17.1-beta'
     compile 'com.google.apis:google-api-services-vision:v1-rev354-1.22.0'
-    compile 'com.android.support.constraint:constraint-layout:+'
+    compile 'com.android.support.constraint:constraint-layout:1.0.2'
     testCompile 'junit:junit:4.12'
 }
+
 
 
 configurations {
