--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -84,6 +84,16 @@
             />
         </activity>
 
+        <activity
+            android:name=".ActivityRecommendProductsSelect"
+            android:label="">
+
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".MainActivity"/>
+            />
+        </activity>
+
         <provider
             android:name="android.support.v4.content.FileProvider"
             android:authorities="com.team.formal.eyeshopping.provider"
