--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -60,7 +60,7 @@
 
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value=".ActivityShowVisuallySimilarImagesSelect"/>
+                android:value=".MainActivity"/>
             />
         </activity>
 
